--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "vercel": "^29.1.1",
     "vite": "^5.0.12",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
+    "supabase-auth-helpers-qwik": "^0.0.3"
   }
 }
