--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "devDependencies": {
     "@auth/core": "^0.13.0",
-    "@builder.io/qwik": "1.4.1",
+    "@builder.io/qwik": "^1.4.3",
     "@builder.io/qwik-auth": "0.1.1",
-    "@builder.io/qwik-city": "1.4.1",
+    "@builder.io/qwik-city": "^1.4.3",
     "@builder.io/qwik-react": "0.5.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -42,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-qwik": "1.4.1",
+    "eslint-plugin-qwik": "^1.4.3",
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
