--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/netlify-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
+    "deploy": "netlify deploy --build",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -35,6 +35,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
     "@mui/x-data-grid": "^6.4.0",
+    "@netlify/edge-functions": "^2.0.0",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.28",
@@ -43,6 +44,7 @@
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.3",
+    "netlify-cli": "^15.0.0",
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
